src/App.css
.header { 
  position: relative;
  z-index: 1;
  background-color: #008fd6;
  height: 10em;
  margin-bottom: 1em;
  
}
.black-box { 
  position: absolute;
  z-index: 3;
  background: black;
  height: 75px;
  width: 75px;
  left: 12%;
  top: 30%;
}
.grey-box { 
  position: absolute;
  z-index: 2;
  background: #989898;  
  left: 10%;
  top: 14%;
  height: 75px;
  width: 75px;
  opacity: 0.9;
}
.logo-title {
  position: absolute;
  z-index: 4;
  color: white;
  left: 14.5%;
  top: 31%;
}
.date {
  position: relative;
  color: white;
  left: 72.5%;
  top: 60%;
}
.car-info-container {
  background-color: #f8f8f8;
  margin-top: 25px;
  display: flex;
  justify-content: center;
  margin-left: auto;
  margin-right: auto;
  height: 300px;
  width: 1010px;
}

.car-info-column {
  flex: 50%; 
  padding: 1px;
  margin: 5px;
  border-radius: 5px;  
}

.car-info-selector-container {
  display: flex;
}

.list-sort-column {
  flex: 30%;
  justify-content: center;
}

.car-selection-column {
  flex: 50%;
  margin-top: 16px;
}

.dropdown {
  margin-top: -16px;
  margin-bottom: 10px;
}

.button-container {
  display: flex;
}

.button-column {
  flex: 50%;
}

.button-right {
  background-color: #008fd6;
  text-align: center;
  width: 140px;
  height: 34px;
  border-radius: 5px;
  float: right;
}

.button-left {
  background-color: #008fd6;
  text-align: center;
  width: 140px;
  height: 34px;
  border-radius: 5px;
  float: left;
}

.button-text {
  padding-top: 8px;
  color: white;
}

#car-table {  
  border-collapse: collapse;
  width: 100%;
}

#car-table td, #car-table th {
  border: 1px solid #ddd;
  padding: 8px;
}

#car-table tr:nth-child(even){background-color: #eaeaea;}

#car-table th {
  padding-top: 12px;
  padding-bottom: 12px;
  text-align: left;
  background-color: #4CAF50;
  color: white;
}

